new words counter, focus translate-btn

--- a/project/src/styles/App.scss
+++ b/project/src/styles/App.scss
@@ -1,9 +1,13 @@
-@import './base/_01_normalize.scss';
-@import './base/_mixins.scss';
-@import './global/_fonts.scss';
-@import './global/_global.scss';
-@import './global/variables.scss';
+@import "./base/_01_normalize.scss";
+@import "./base/_mixins.scss";
+@import "./global/_fonts.scss";
+@import "./global/_global.scss";
+@import "./global/_variables.scss";
 
 body {
   font-family: $font-family;
+}
+
+.selected {
+  margin: 2vw;
 }
