add input error

--- a/project/src/styles/_newWords.scss
+++ b/project/src/styles/_newWords.scss
@@ -1,8 +1,8 @@
 .tablecell {
-    &__input div {
-        font-size: 0.72vw !important;
-    }
-    &__icons div {
-        padding: 0 !important;
-    }
+  &__input {
+    font-size: 0.72vw !important;
+  }
+  &__icons div {
+    padding: 0 !important;
+  }
 }
